--- a/port-wasm/index.html
+++ b/port-wasm/index.html
@@ -69,6 +69,7 @@
             text-align: center;
             vertical-align: middle;
             display: inline-block;
+            border-radius: 15px;
         }
 
         .vk-hide {
