fix: removed empty style from canvas tag

--- a/port-wasm/index.html
+++ b/port-wasm/index.html
@@ -173,7 +173,7 @@
         <div class=" vk vk-hide" style="background-color: transparent !important" data-k="dl"></div>
         <div class=" vk vk-hide" style="background-color: transparent !important" data-k="dr"></div>
     </div>
-    <canvas width="240" height="160" id="gba-canvas" style=""></canvas>
+    <canvas width="240" height="160" id="gba-canvas"></canvas>
     <script src="localforage.js"></script>
     <script src="app.js"></script>
     <script src="build/44gba.js"></script>
